# char_reader

./: Cargo.toml  README.md
src/: lib.rs  reader.rs  tests.rs  unicode.rs
